Fix overflow off page sides

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -35,6 +35,7 @@ $expand-width:         480px;
 body {
   background: url(../../public/img/shingles.jpg) repeat;
   background-size: 244px;
+  overflow-x: hidden;
 }
 
 .roofing-solid {
